--- a/class-posicionamento/css/about.css
+++ b/class-posicionamento/css/about.css
@@ -46,9 +46,18 @@ body {
 
 .apresentacao{
     display: flex;
+    gap: 16px;
     justify-content: space-evenly;
     align-items: center;
     margin: 120px;
+}
+.apresentacao__imagem{
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    gap: 12px;
+    align-items: center;
+ 
 }
 .apresentacao__section{
     display: flex;
