--- a/class-posicionamento/css/main.css
+++ b/class-posicionamento/css/main.css
@@ -43,9 +43,19 @@ body {
 }
 .apresentacao{
     display: flex;
+    gap: 16px;
     justify-content: space-evenly;
     align-items: center;
     margin: 120px;
+}
+
+.apresentacao__imagem{
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    gap: 12px;
+    align-items: center;
+ 
 }
 
 .apresentacao__section{
